# phenology

./: .gitignore  Alles_LabBook.org  CMakeLists.txt  LabBook.org  PEG_Analysis.org  README.org  analysis-AHS.R  analysis-from-labbook.R  analysis.R  single-image.org  small_analysis.org
PEN-import/: pen-import.py
cmake/: FindGeoTIFF.cmake
experiments/: dc_TKY_btp_n_grain100_masked.csv  dc_TKY_btp_n_grain20_masked.csv  dc_all_grain100_masked.csv
hsv-picture/: colors.py  convertToHsv.py
palette/: example.palette  example100-blue.palette  example100-green.palette  example100-red.palette  example100.palette  viridis-blue.palette  viridis-green.palette  viridis-red.palette  viridis.palette
presentations/17_ePhenology_Workshop/: EPHENOLOGY_workshop_2017_12.org
scripts/: pga_cpm  pga_csv  pga_draw_palette  pga_palette
src/: args.c  args.h  avg_green_segment.c  get_green_average.c  metrics.c  metrics.h  palette.c  palette.h  read_palette.c  read_palette.h  tiff_aux.c  tiff_hist.c  tiff_palette.c
